# LegacyWoD

./: CMakeLists.txt  README.md  revision_data.h.in.cmake
cmake/: showoptions.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindOpenSSL.cmake
sql/base/: auth_database.sql
sql/create/: create_mysql.sql  drop_mysql.sql
src/server/authserver/: Main.cpp  authserver.rc
src/server/shared/: GitRevision.cpp
src/server/shared/Cryptography/: ARC4.cpp  ARC4.h  HMACSHA1.cpp  HMACSHA1.h
src/server/worldserver/: Main.cpp  Master.cpp  worldserver.rc
